--- a/style.css
+++ b/style.css
@@ -23,3 +23,27 @@ width: 20%;
 .site-titulo{
     padding: 30px 0;
 }
+
+.chuteira-um{
+    width: 15%;
+}
+
+.chuteira-dois{
+    width: 17%;
+}
+
+.chuteira-tres{
+    width: 13%;
+}
+
+.chuteira-quatro{
+    width: 15%;
+}
+
+.chuteira-cinco{
+    width: 17%;
+}
+
+.chuteira-seis{
+    width: 8%;
+}
